--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,6 @@
-body{
-    
-    height: 500px;
-    background-image: url("../imagenes/fondo.jpg");
+body{   
+  height: 500px;
+  background-image: url("../imagenes/fondo.jpg");
   background-repeat:no-repeat;
   background-position-x:center;
   background-position-y:center;
@@ -11,43 +10,51 @@ body{
 h1{
     text-align: center;
     color:rgb(241, 105, 56); 
-    font-size: 55px;
+    font-size: 30px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h2{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 div{
     text-align: center;
 }
 
-a{
-    text-align: center;
-    color:rgb(77, 74, 74);
-    font-size: 25px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
 
 .mensaje{
     text-shadow: rgb(247, 144, 97) 0.1em 0.1em 0.2em;
     text-align: center;
     color:rgb(36, 36, 36);
     font-size: 65px;
-    font-family:cursive;
-    
+    font-family:cursive;    
 }
 
-.cita{
-    margin-right: 70px;
-    text-align:right;
+h5{
     color:orangered;
-    font-size: 20px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.imagenes{
+    text-align: center;
+    width: 250px;
+    height: 200px;
+}
+
+.contenedor{
+    display: flex;
+    justify-content: center;
+}
+
+.contenedor2{
+    display: flex;
+    justify-content: center;   
 }
 
 p{
-    text-align: center;
-    text-shadow: rgb(250, 226, 201) 0.1em 0.1em 0.2em;
-    color:rgb(56, 55, 55);
-    font-size: 25px;
+    text-align: justify;
+    color:rgb(10, 10, 10);
+    font-size: 15px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -57,24 +64,4 @@ table{
     text-align: center;
 }
 
-th{
-    font-size: 24px; 
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;   
-    font-weight: normal;     
-    padding: 8px;     
-    background: #8a8c8d;
-    border-top: 4px solid #4f5053;    
-    border-bottom: 1px solid #fff; 
-    color: rgb(252, 250, 249);     
-}
-
-td {   
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    padding: 8px;     
-    background:#fff;     
-    border-bottom: 1px solid rgb(189, 189, 189);
-    color:black;    
-    border-top: 1px solid transparent; 
-}
 
