--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,8 @@ h1{
 
 h2{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-style: oblique;
 }
 
 div{
@@ -33,6 +35,18 @@ div{
 
 h5{
     color:orangered;
+}
+
+h3{
+    color: rgb(44, 43, 43);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    text-align: center;
+}
+h6{
+    color: black;
+    font-size: 20px;
+    text-align: center;
 }
 
 .imagenes{
@@ -63,5 +77,8 @@ table{
     margin-right: auto;
     text-align: center;
 }
+option{
 
+    font-size: 15px;
+}
 
